styles/Layout.module.scss
@use "./variables" as v;

@media all and (min-width: 0px) {
  .header,
  .topFooter {
    padding: 3%;
    z-index: 1;
    a {
      color: v.$maroon;
      &:hover {
        color: v.$orange;
      }
    }
    ul {
      list-style: none;
    }
  }

  .header {
    padding: 0 3%;
    position: absolute;
    width: 100vw;
    height: 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: none;
    .menuButton {
      background: none;
      border: none;
      cursor: pointer;
    }
    nav {
      position: fixed;
      top: 0;
      right: 0;
      background-color: v.$white;
      height: 100vh;
      width: 60%;
      text-align: right;
      padding: 5%;
      box-shadow: none;
      transform: translate(100%);
      transition: transform 300ms ease-in-out;
      z-index: 2;
      ul {
        margin-top: 25%;
      }
      li {
        margin-bottom: 20%;
      }
      &.visible {
        transform: translate(0%);
        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
      }
    }
  }

  .topFooter {
    background-color: v.$white;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 25px;
    padding-top: 5%;
    h2 {
      color: v.$teal;
    }
    li {
      margin-bottom: 10%;
    }
  }
  .bottomFooter {
    background-color: v.$maroon;
    color: v.$white;
    padding: 3%;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 5px;
    a {
      color: v.$white;
      &:hover {
        text-decoration: underline;
      }
    }
  }
}

@media all and (min-width: v.$tablet) {
  .topFooter {
    gap: 50px;

    .wrapper {
      width: 100%;
      display: flex;
      justify-content: space-evenly;
    }
    li {
      margin-bottom: 3%;
    }
  }
}

@media all and (min-width: v.$desktop) {
  .header {
    flex-grow: 1;
    padding: 4% 3%;
    .menuButton {
      display: none;
    }
    nav {
      position: relative;
      transform: translate(0%);
      height: auto;
      padding: 0;
      width: 70%;
      max-width: 800px;
      background: none;
      &.visible {
        box-shadow: none;
      }
      a {
        color: v.$white;
      }
      ul {
        margin: 0;
        display: flex;
        gap: 30px;
        justify-content: right;
        align-items: center;
      }
      li {
        flex-shrink: 0;
        flex-grow: 1;
        margin: 0;
      }
    }
  }
}

